# c-tic-tac-toe

./: CMakeLists.txt  README.md
include/SDL2/: SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_mouse.h  SDL_render.h  SDL_shape.h  SDL_video.h
include/glad/: glad.h
src/: glad.c  main.c
